bootsrtap4 update + styles added

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,18 @@
 <html>
     <head>
         <title>CommonJS React Skeleton</title>
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="css/bootstrap.css">
         <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     </head>
     <body>
-        <div id="ingredients">
+    <div class="row">
+        <div class="col-md-4">
+            <div id="to-do-list"></div>
         </div>
+        <div class="col-md-4">
+            <div id="completed-tasks"></div>
+        </div>
+    </div>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/main.js"></script>
     </body>
