--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,24 @@
         <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     </head>
     <body>
-    <div class="row">
-        <div class="col-md-4">
-            <div id="to-do-list"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div id="to-do-list"></div>
+            </div>
+            <div class="col-md-4">
+                <div id="completed-tasks"></div>
+            </div>
         </div>
-        <div class="col-md-4">
-            <div id="completed-tasks"></div>
+        <div class="row">
+            <div class="col-md-4">
+                <div id="lead-capture"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div id="test"></div>
+            </div>
         </div>
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
